--- a/Examples/Tic Tac Toe/Server/.project
+++ b/Examples/Tic Tac Toe/Server/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Master Server</name>
+	<name>Tic Tac Toe Server</name>
 	<comment></comment>
 	<projects>
 	</projects>
