--- a/Examples/Tic Tac Toe/Client/GNUmakefile
+++ b/Examples/Tic Tac Toe/Client/GNUmakefile
@@ -12,7 +12,7 @@ ROMNAME     = tictactoe
 BUILDDIR    = build
 ASMFILES    = asm/entry.s asm/rom_header.s asm/assets.s
 ASMOBJECTS  = $(ASMFILES:%.s=${BUILDDIR}/%.o)
-CODECFILES  = main.c graphic.c helper.c stage00.c datastructs.c text.c netlib.c usb.c
+CODECFILES  = main.c graphic.c helper.c stage_init.c datastructs.c text.c netlib.c usb.c
 CODEHFILES  =
 
 DEBUGFILES = debug.c
