Client clock handling

--- a/Examples/Realtime/Client/makefile
+++ b/Examples/Realtime/Client/makefile
@@ -3,7 +3,7 @@
 ################################################################
 
 ROMNAME     = realtime
-CODECFILES  = main.c graphic.c helper.c datastructs.c text.c netlib.c usb.c packets.c stage_hello.c
+CODECFILES  = main.c graphic.c helper.c datastructs.c text.c netlib.c usb.c packets.c stage_init.c
 CODEHFILES  =
 
 DEBUGFILES = debug.c 
