Clock sync done

--- a/Examples/Realtime/Client/makefile
+++ b/Examples/Realtime/Client/makefile
@@ -3,7 +3,9 @@
 ################################################################
 
 ROMNAME     = realtime
-CODECFILES  = main.c graphic.c helper.c datastructs.c text.c netlib.c usb.c packets.c stage_init.c
+CODECFILES  = main.c graphic.c helper.c datastructs.c text.c netlib.c usb.c packets.c objects.c mathtypes.c \
+              stage_init.c \
+              stage_main.c
 CODEHFILES  =
 
 DEBUGFILES = debug.c 
