--- a/.github/workflows/build-master.yml
+++ b/.github/workflows/build-master.yml
@@ -1,14 +1,18 @@
 name: Compile Master Server
 
+env:
+  PROJECT_NAME: 'MasterServer'
+  PROJECT_PATH: 'Master Server'
+
 on:
   push:
+    branches: [ "main" ]
     paths:
       - 'Master Server/**'
-    branches: [ "main" ]
   pull_request:
+    branches: [ "main" ]
     paths:
       - 'Master Server/**'
-    branches: [ "main" ]
 
 jobs:
   build:
@@ -17,10 +21,15 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: Set up JDK 21
+    - name: Set up JDK 17
       uses: actions/setup-java@v4
       with:
-        java-version: '21'
+        java-version: '17'
         distribution: 'temurin'
     - name: Build with Ant
-      run: ant -noinput -buildfile 'Master Server/build.xml'
+      run: ant -noinput -buildfile '${{ env.PROJECT_PATH }}/build.xml'
+    - name: Upload artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: ${{ env.PROJECT_NAME }}
+        path: ${{ env.PROJECT_PATH }}/MasterServer.jar
