--- a/.github/workflows/build-browser.yml
+++ b/.github/workflows/build-browser.yml
@@ -30,6 +30,8 @@ jobs:
       WXWIN: D:/wxWidgets/
 
     steps:
+      - uses: actions/checkout@v4
+
       - name: Download wxWidgets
         run: |
           cd D:/
@@ -38,11 +40,22 @@ jobs:
           git checkout tags/${{ env.WXVERSION }}
           git submodule update --init --recursive
 
-      - uses: ilammy/msvc-dev-cmd@v1
       - name: Compile wxWidgets
         run: |
           cd D:/wxWidgets/build/msw
           msbuild /m /p:Configuration=Release /p:Platform=Win32 /p:PlatformToolset=v141_xp wx_vc16.sln
+
+      - name: Download UNFLoader
+        run: |
+          cd D:/
+          git clone https://github.com/buu342/N64-UNFLoader
+          cd N64-UNFLoader
+          git submodule update --init --recursive
+
+      - name: Compile UNFLoader
+        run: |
+          cd D:/N64-UNFLoader/UNFLoader
+          msbuild /m /p:Configuration=Release /p:Platform=Win32 /p:PlatformToolset=v141_xp FlashcartLib_Static.vcxproj
 
       - name: Add MSBuild to PATH
         uses: microsoft/setup-msbuild@v2
@@ -50,10 +63,10 @@ jobs:
           vs-version: '16.0'
           msbuild-architecture: x86
 
-      - uses: actions/checkout@v4
       - name: Build NetLib Browser
         working-directory: ${{ env.GITHUB_WORKSPACE }}
         run: |
+          xcopy /Y "D:/N64-UNFLoader/UNFLoader/Release/Flashcart.lib" "${{ env.GITHUB_WORKSPACE }}/Client App/Include"
           msbuild /m /p:Configuration=${{ env.BUILD_CONFIGURATION }} /p:Platform=${{ env.BUILD_PLATFORM }} "${{ env.SOLUTION_FILE_PATH }}"
 
       - name: Upload artifact
@@ -88,6 +101,16 @@ jobs:
           make -j$(nproc)
           sudo make install
           sudo ldconfig
+          
+      - name: Build UNFLoader
+        run: |
+          git clone https://github.com/buu342/N64-UNFLoader
+          cd N64-UNFLoader
+          git submodule update --init --recursive
+
+          cd UNFLoader
+          make static
+          cp -f flashcart.a "${{ env.SOURCES_DIRECTORY }}/Include"
 
       - name: Build NetLib Browser
         run: |
@@ -127,6 +150,16 @@ jobs:
           ../configure --with-opengl --disable-shared --disable-sys-libs
           make
           sudo make install
+          
+      - name: Build UNFLoader
+        run: |
+          git clone https://github.com/buu342/N64-UNFLoader
+          cd N64-UNFLoader
+          git submodule update --init --recursive
+
+          cd UNFLoader
+          make static
+          cp -f flashcart.a "${{ env.SOURCES_DIRECTORY }}/Include"
 
       - name: Build NetLib Browser
         run: |
