--- a/.gitignore
+++ b/.gitignore
@@ -419,3 +419,5 @@ Client App/Include/flashcart.a
 Client App/Include/Flashcart.lib
 Client App/Include/flashcart_d.a
 Client App/Include/Flashcart_d.lib
+
+!.github/**
